fixed text ellipsis, boxes no logner cut off

--- a/src/webview-ui/App.css
+++ b/src/webview-ui/App.css
@@ -1,6 +1,4 @@
 main {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   height: 100%;
